# wl-hosted-coproc-macos-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ipc.c  ipc.h  main.c  posix_osal.c  posix_osal.h  wifi_backend.h  wifi_backend_real.c  wifi_backend_real.h  wifi_backend_real.swift
tests/: test_ipc.c  test_posix_osal.c
